# django_sprint3

./: .flake8  .gitignore  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  ruff.toml
blogicum/apps/blog/: admin.py  apps.py  models.py  urls.py  views.py
blogicum/apps/blog/migrations/: 0001_initial.py  0002_auto_20240512_1923.py  0003_alter_category_slug.py
blogicum/apps/core/: models.py
blogicum/apps/pages/: views.py
blogicum/blogicum/: settings.py  urls.py
blogicum/templates/: base.html
blogicum/templates/blog/: category.html  category_posts.html  detail.html  index.html  post_detail.html
blogicum/templates/includes/: header.html  post_short.html
blogicum/templates/pages/: rules.html
static_dev/css/: style.css
templates/: base.html
