[tool.poetry]
name = "blogicum"
version = "0.1.0"
description = "YaPraktikum Backend Developer Sprint 3 project"
authors = ["NovaHFly <mugiviska@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "3.2.16"
django-debug-toolbar = "3.8.1"


[tool.poetry.group.test.dependencies]
mixer = "7.2.2"
pytest = "7.1.3"
pytest-django = "4.5.2"


[tool.poetry.group.code-quality.dependencies]
pep8-naming = "0.13.3"
flake8 = "5.0.4"
flake8-docstrings = "1.7.0"
ruff = "^0.4.4"
djlint = "^1.34.1"
mypy = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
